# DE_proj_2024_2025

./: .env-example  .gitignore  .pylintrc  README.md  docker-compose.yml  pyproject.toml  sqlc.yaml
data/: readme.md
data/load/: ft_balance_f.csv
db/: readme.md
db/migrations/: 0000_INIT_DB.up.sql  0001_DS.USER_N_SCHEMA.up.sql  0002_DS.TABLE.FT_BALANCE_F.up.sql  0003_DS.TABLE.FT_POSTING_F.up.sql  0004_DS.TABLE.MD_ACCOUNT_D.up.sql  0005_DS.TABLE.MD_CURRENCY_D.up.sql  0006_DS.TABLE.MD_EXCHANGE_RATE_D.up.sql  0007_DS.TABLE.MD_LEDGER_ACCOUNT_S.up.sql  0008_DS.PRIVILEGES.up.sql  9999_LOGS.SCHEMA.up.sql
db/queries/ds/: ft_balance_f.sql  ft_posting_f.sql  md_account_d.sql  md_currency_d.sql  md_exchange_rate_d.sql  md_ledger_account_s.sql
db/queries/logs/: logs.sql
src/api/: __init__.py  run_fastapi.py
src/api/response_models/: __init__.py  ft_balance_f.py  ft_posting_f.py  md_account_d.py  md_currency_d.py  md_exchange_rate_d.py  md_ledger_account_s.py
src/api/routers/: __init__.py
src/api/routers/ds_routers/: __init__.py  ds_etl_process.py  ft_balance_f.py  ft_posting_f.py  md_account_d.py  md_currency_d.py  md_exchange_rate_d.py  md_ledger_account_s.py
src/configurations/: database.py  settings.py
src/database/: __init__.py
src/database/schemas/: __init__.py
src/database/schemas/dm/: __init__.py
src/database/schemas/ds/: __init__.py  ft_balance_f.py  ft_posting_f.py  md_account_d.py  md_currency_d.py  md_exchange_rate_d.py  md_ledger_account_s.py  models.py
src/database/schemas/logs/: __init__.py  logs.py  models.py
src/logs/: database_logger.py
